--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                             </li>
 
                             <li class="pt-2 pl-4">
-                                <a href="">
+                                <a href="/Demand">
                                     <div class="material-icons size-18 pr-1">search</div>
                                     <label>Demanda</label>
                                 </a>
