--- a/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
@@ -384,14 +384,14 @@
             const serviceExists = jsonData.servicios != '' && jsonData.unidad != '' && true;
             console.log('post', jsonData);
             if (serviceExists) {
-                @*$.post("/Travels/setTravels", jsonData, function (res) {
+                $.post("/Travels/setTravels", jsonData, function (res) {
                     dToast("success", "Registro guardado exitosamente.", "Registrado");
                     $(".guardar").attr("disabled", false);
                     window.location.replace("@Url.Action("", "Travels")");
                 }).fail(function (error) {
                     dToast("error", "Error al tratar de guardar el registro", "Error");
                     $(".guardar").attr("disabled", false);
-                });*@
+                });
             } else {
                 const { servicios } = jsonData;
                 dToast("error", servicios == '' ? "LOS SERVICIOS SON OBLIGATORIOS" : "LA UNIDAD ES OBLIGATORIA", "Error");
