--- a/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
@@ -21,8 +21,8 @@
                     <input type="hidden" id="idEditarOtros" value="0" />
                     <div class="d-flex flex-nowrap">
                         <div class="ml-auto p-2">
-                            <button type="submit" class="btn btn-sm btn-secondary">
-                                <span class="material-icons">
+                            <button type="submit" class="btn btn-sm btn-secondary" style="background-color:transparent;">
+                                <span class="material-icons" style="color:cornflowerblue;">
                                     save
                                 </span>
                             </button>
