--- a/KLS_WEB/KLS_WEB/Views/Clients/ActiveRoutes/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/ActiveRoutes/Index.cshtml
@@ -61,19 +61,32 @@
                 <form id="frmRegister" action="#" method="post">
                     <input type="hidden" name="id" id="idEditar" value="0" />
                     <div class="row">
-                        <div class="col-md-12">
+                        @*<div class="col-md-12">
                             <label class="">Ruta origen</label>
                             <select class="form-control" id="Id_Ruta_Origen" name="Id_Ruta_Origen" style="width:100%;" onchange="selectRuta();">
                                 <option value="0">Selecciona una option</option>
                             </select>
+                        </div>*@
+                        <div class="col-md-6">
+                            <label class="">Ruta origen</label>
+                            <select class="form-control form-control-md" id="Estado" style="width:100%;font-size:6px;" onchange="selectCiudad();">
+                                <option value="0">Selecciona una opción</option>
+                            </select>
                         </div>
+                        <div class="col-md-6">
+                            <label class="">Ruta origen</label>
+                            <select class="form-control form-control-md" id="Ciudad" style="width:100%;font-size:6px;" onchange="selectRuta();">
+                                <option value="0">Selecciona una opción</option>
+                            </select>
+                        </div>
+
                     </div>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label class="">Ruta</label>
                                 <select id="Id_Ruta" class="form-control" name="Id_Ruta" style="width:100%;">
-                                    <option value="0">Selecciona una option</option>
+                                    <option value="0">Selecciona una opción</option>
                                 </select>
                             </div>
                         </div>
@@ -124,12 +137,15 @@
 
         $(window).ready(function () {
             loadCity();
+            $("#Estado").select2();
+            $("#Ciudad").select2();
+            $("#Id_Ruta").select2();
+
             $("#frmRegister").submit(function (event) {
                 event.preventDefault();
                 var jsonData = convertJson($("#frmRegister"));
                 jsonData["Id_Cliente"] = @id;
                 var idruta = $("#Id_Ruta").val();
-                console.log(idruta);
                 if (parseInt(idruta) != 0 && idruta!=null) {
                     if (parseInt($("#idEditar").val()) != 0) {
                         $.post("/Clients/ActiveRoutes/putRoutes", jsonData, function (res) {
@@ -146,6 +162,9 @@
                             dToast("success", "Se guardó el registro", "Registrado");
                             $(".guardar").attr("disabled", false);
                             $('#frmRegister').trigger("reset");
+                            $("#Estado").change();
+                            $("#Ciudad").change();
+                            $("#Id_Ruta").change();
                         }).fail(function (error) {
                             dToast("error", "Error al tratar de guardar el registro", "Error");
                             $(".guardar").attr("disabled", false);
@@ -163,7 +182,7 @@
                 $("#Id_Ruta_Origen").empty();
                 $("#Id_Ruta_Origen").append(`<option value="0">Selecciona una opcion</option>`);
                 $.each(res, function (item, key) {
-                    //console.log(key);
+                    console.log(key);
                     if (parseInt(key.estatus) == 1) {
                         let indice_co = catCiudad.findIndex(service => service.id === key.id_ciudadorigen);
                         let indice_cd = catCiudad.findIndex(service => service.id === key.id_ciudaddestino);
@@ -194,23 +213,58 @@
         //    });
         //}
 
+        //function selectRuta() {
+        //    $("#Id_Ruta").empty();
+        //    $("#Id_Ruta").append(`<option value="0">Selecciona una opcion</option>`);
+        //    var idRut = $("#Id_Ruta_Origen").val();
+        //    $.each(catRutas, function (item, key) {
+        //        if (parseInt(key.estatus) == 1) {
+        //            let indice = catRutas.findIndex(service => service.id == idRut);
+        //            if (indice >= 0) {
+        //                if (catRutas[indice].id_estadoorigen == key.id_estadoorigen) {
+        //                    let indice_cd = catCiudad.findIndex(service => service.id === key.id_ciudaddestino);
+        //                    let indice_ed = catEstado.findIndex(service => service.id === key.id_estadodestino);
+        //                    $("#Id_Ruta").append(`<option value="${key.id}">Estado destino:${catEstado[indice_ed].nombre}--Ciudad destino:${catCiudad[indice_cd].nombre}</option>`);
+        //                }
+        //            }
+        //        }
+        //    });
+        //    $("#Id_Ruta").select2();
+        //}
+
         function selectRuta() {
             $("#Id_Ruta").empty();
-            $("#Id_Ruta").append(`<option value="0">Selecciona una opcion</option>`);
-            var idRut = $("#Id_Ruta_Origen").val();
+            $("#Id_Ruta").append(`<option value="0">Selecciona una opción</option>`);
+            //var idRut = $("#Id_Ruta_Origen").val();
+
+            var idEstado = parseInt($("#Estado").val());
+            var idCiudad = parseInt($("#Ciudad").val());
+
             $.each(catRutas, function (item, key) {
                 if (parseInt(key.estatus) == 1) {
-                    let indice = catRutas.findIndex(service => service.id == idRut);
-                    if (indice >= 0) {
-                        if (catRutas[indice].id_estadoorigen == key.id_estadoorigen) {
-                            let indice_cd = catCiudad.findIndex(service => service.id === key.id_ciudaddestino);
-                            let indice_ed = catEstado.findIndex(service => service.id === key.id_estadodestino);
-                            $("#Id_Ruta").append(`<option value="${key.id}">Estado destino:${catEstado[indice_ed].nombre}--Ciudad destino:${catCiudad[indice_cd].nombre}</option>`);
-                        }
+                    //let indice = catRutas.findIndex(service => service.id == idRut);
+                    //if (indice >= 0) {
+                    if (idEstado == key.id_estadoorigen && idCiudad == key.id_ciudadorigen) {
+                        let indice_cd = catCiudad.findIndex(service => service.id === key.id_ciudaddestino);
+                        let indice_ed = catEstado.findIndex(service => service.id === key.id_estadodestino);
+                        $("#Id_Ruta").append(`<option value="${key.id}">Estado destino: ${catEstado[indice_ed].nombre}--Ciudad destino:${catCiudad[indice_cd].nombre}</option>`);
                     }
+                    //}
                 }
             });
             $("#Id_Ruta").select2();
+        }
+
+        function selectCiudad() {
+            var idEstado = $("#Estado").val();
+            $("#Ciudad").empty();
+            $("#Ciudad").append(`<option value="0">Selecciona una opción</option>`);
+            $.each(catCiudad, function (item, key) {
+                if (parseInt(key.id_estado) == parseInt(idEstado)) {
+                    $("#Ciudad").append(`<option value="${key.id}">${key.nombre}</option>`);
+                }
+            });
+            $("#Ciudad").select2();
         }
 
         function showModal(titulo = "Title", accion, idEditar = 0) {
@@ -222,10 +276,20 @@
             if (accion == "Editar") {
                 try {
                     let indice = dataRutas.findIndex(service => service.id === idEditar);
+                    let idrutaSel = catRutas.findIndex(service => service.id === dataRutas[indice].id_Ruta);
+                    console.log(catRutas[idrutaSel])
+                    $('#Estado option[value="' + catRutas[idrutaSel].id_estadoorigen + '"]').attr("selected", true);
+                    $("#Estado").change();
+
+                    $('#Ciudad option[value="' + catRutas[idrutaSel].id_ciudadorigen + '"]').attr("selected", true);
+                    $("#Ciudad").change();
+
                     $("#Id_Cliente_Kls").val(dataRutas[indice].id_Cliente_Kls);
                     $('#Monitoreable').prop('checked', dataRutas[indice].monitoreable);
                     $('#Id_Ruta option[value="' + dataRutas[indice].id_Ruta + '"]').attr("selected", true);
+                    $("#Id_Ruta").change();
                     $('#Estatus option[value="' + dataRutas[indice].estatus + '"]').attr("selected", true);
+
                     $("#modalDiv").modal("show");
                 } catch (error) {
                     dToast("error", "Error al tratar de editar, intenta recargar la página.", "Error");
@@ -249,6 +313,10 @@
         function loadState() {
             $.get("/Catalogs/Geography/State/getState", function (res) {
                 catEstado = res;
+                $.each(res, function (item, key) {
+                    $("#Estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+                });
+                $("#Estado").select2();
                 getRutas();
             }).fail(function (error) {
                 dToast("error", "Error al obtener paises", "Atencion!");
@@ -262,7 +330,6 @@
             $.get("/Clients/ActiveRoutes/getRutas", function (res) {
                 dataRutas = res;
                 $.each(res, function (item, key) {
-                    console.log(key);
                     let rutaI = catRutas.findIndex(service => parseInt(service.id) === parseInt(key.id_Ruta));
                     if (rutaI >= 0) {
                         const IdGenerado = `${String(catRutas[rutaI].id_ciudadorigen).padStart(4, '0')}${String(catRutas[rutaI].id_ciudaddestino).padStart(4, '0')}`;
@@ -280,7 +347,7 @@
                                 <td>${key.id_Cliente_Kls}</td>
                                 <td>${catEstado[indice_eo].id_sepomex}-${catEstado[indice_eo].nombre}</td>
                                 <td>${catEstado[indice_ed].id_sepomex}-${catEstado[indice_ed].nombre}</td>
-                                <td>12 Hr</td>
+                                <td>${catRutas[rutaI].tiemporuta} Hr</td>
                                 <td>
                                     <input type="checkbox" ${check} style="pointer-events:none;">
                                 </td>
