--- a/KLS_WEB/KLS_WEB/Views/Clients/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Index.cshtml
@@ -12,7 +12,7 @@
             </div>
 
             <div class="ml-auto p-2 pb-2">
-                <a class="btn btn-sm btn-secondary" href="/Clients/formClients/0">
+                <a class="btn btn-sm btn-secondary" href="/Clients/formClients/">
                     <span class="material-icons">
                         add
                     </span>
