--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Colonies/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Colonies/Index.cshtml
@@ -1,7 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Colonias";
 }
+@section Styles{ 
+    <style>
+        .spinner {
+          border: 4px solid rgba(0, 0, 0, 0.1);
+          width: 36px;
+          height: 36px;
+          border-radius: 50%;
+          border-left-color: #09f;
 
+          animation: spin 1s ease infinite;
+        }
+
+        @@keyframes spin {
+          0% {
+            transform: rotate(0deg);
+          }
+
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+    </style>
+}
 <div class="p-4">
     <div class="d-flex flex-nowrap">
         <div class="p-2">
@@ -22,20 +44,47 @@
         </div>
     </div>
     <div class="p-4 shadow bg-white">
-        <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
-            <thead>
-                <tr>
-                    <th>Estado</th>
-                    <th>Ciudad Municipio</th>
-                    <th>CP</th>
-                    <th>Colonia</th>
-                    <th>Estatus</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody id="table-info"></tbody>
-        </table>
-
+        <div id="table_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
+            <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="table_length"><label>Mostrar <select name="table_length" aria-controls="table" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> Entradas</label></div></div><div class="col-sm-12 col-md-6"><div id="table_filter" class="dataTables_filter"><label>Buscar<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="table"></label></div></div></div><div class="row">
+                <div class="col-sm-12">
+                    <table id="table" class="table table-striped table-bordered display table-hover table-viajes no-footer dataTable" width="100%" role="grid" aria-describedby="table_info" style="width: 100%;">
+                        <thead>
+                            <tr>
+                                <th>Estado</th>
+                                <th>Ciudad Municipio</th>
+                                <th>CP</th>
+                                <th>Colonia</th>
+                                <th>Estatus</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-info"></tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-5">
+                    <div class="dataTables_info" id="table_info" style="display:block;">
+                        Mostrando 1 a 1 de 1 Entradas
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-7">
+                    <div class="dataTables_paginate paging_simple_numbers" id="table_paginate">
+                        <ul class="pagination">
+                            <li class="paginate_button page-item previous" id="table_previous">
+                                <a href="#" aria-controls="table" data-dt-idx="0" tabindex="0" class="page-link" onclick="paginar('anterior');">Anterior</a>
+                            </li>
+                            <li class="paginate_button page-item active">
+                                <a href="#" aria-controls="table" data-dt-idx="1" tabindex="0" class="page-link"><span id="numerop">1</span></a>
+                            </li>
+                            <li class="paginate_button page-item next" id="table_next">
+                                <a href="#" aria-controls="table" data-dt-idx="2" tabindex="0" class="page-link" onclick="paginar('siguiente');">Siguiente</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -109,6 +158,10 @@
 
         $(document).ready(function () {
             loadState();
+            //$.get("Colonies/getColonies?", function (res) {
+            //    console.log(res);
+            //});
+
             $("#frmRegister").submit(function (event) {
                 event.preventDefault();
                 var jsonData = convertJson($("#frmRegister"));
@@ -116,7 +169,6 @@
                 if (parseInt($("#id_estado").val()) != 0) {
                     if (parseInt($("#idEditar").val()) != 0) {
                         $.post("Colonies/putColonies", jsonData, function (res) {
-                            //console.log(res);
                             loadTable();
                             dToast("success", "Registro actualizado exitosamente.", "Registrado");
                             $(".guardar").attr("disabled", false);
@@ -152,8 +204,12 @@
                 try {
                     let indice = dataColonias.findIndex(service => service.id === idEditar);
                     $("#cp").val(dataColonias[indice].cp);
-                    $("#nombre").val(dataColonias[indice].nombre);                    
+                    $("#nombre").val(dataColonias[indice].nombre);
+                    $('#id_estado option[value="' + dataColonias[indice].id_estado + '"]').attr("selected", true);
                     $('#estatus option[value="' + dataColonias[indice].estatus + '"]').attr("selected", true);
+                    $("#id_estado").change();
+                    $('#id_ciudad option[value="' + dataColonias[indice].id_ciudad + '"]').attr("selected", true);
+                    $("#id_ciudad").change();
                     $("#modalDiv").modal("show");
                 } catch (error) {
                     dToast("error", "Error al tratar de editar, intenta recargar la página.", "Error");
@@ -187,13 +243,14 @@
         //Cargar ciudad
         function loadCity() {
             $.get("City/getCity", function (res) {
-                catCiudad = res;
-                loadTable();
+                if (res) {
+                    catCiudad = res;
+                    loadTable();
+                }
             }).fail(function (error) {
                 dToast("error", "Error al obtener paises", "Atencion!");
             });
         }
-
 
         function filCiudad() {
             $("#id_ciudad").empty();
@@ -210,36 +267,73 @@
             dSelect('id_ciudad');
         }
 
+        var Pagina = 1
+        var CantidadAMostrar = 10
+
+        function paginar(paginador)
+        {
+            if (paginador == 'anterior') {
+                if (Pagina >= 2)
+                {
+                    Pagina = Pagina - 1;
+                    loadTable();
+                }
+            } else {
+                Pagina = Pagina + 1;
+                loadTable();
+            }
+
+            $("#numerop").empty();
+            $("#numerop").append(Pagina);
+        }
+
         function loadTable() {
-            var stable = $('.table-viajes').DataTable();
-            stable.destroy();
             $("#table-info").empty();
-            $.get("Colonies/getColonies", function (res) {
-                dataColonias = res;
-                $.each(res, function (item, key) {
+            $("#table-info").append(`<tr>
+                                        <td colspan="6">
+                                            <div style="float: left;">
+                                                <div class='spinner'></div>
+                                            </div>
+                                            <div style="float: left;padding-top:8px;">
+                                                <b style="padding:18px;">Cargando...</b>
+                                            </div>
+                                        </td>
+                                    </tr>`);
+            $.get("Colonies/getColonies", { "Pagina": Pagina, "CantidadAMostrar": CantidadAMostrar }, function (res) {
+                dataColonias = res.colonias;
+                $("#table_info").empty();
+                $("#table_info").append("Mostrando " + Pagina + " a " + CantidadAMostrar + " de " + res.total + " Registros");
+                $("#table-info").empty();
+                $.each(dataColonias, function (item, key) {
+                    console.log(key);
                     let indice_e = catEstado.findIndex(service => service.id === key.id_estado);
                     let indice_c = catCiudad.findIndex(service => service.id === key.id_ciudad);
-                    $("#table-info").append(`
-                             <tr>
-                                <td>${catEstado[indice_e].nombre}</td>
-                                <td>${catCiudad[indice_c].nombre}</td>
-                                <td>${nCon(key.cp)}</td>
-                                <td>${nCon(key.nombre)}</td>
-                                <td>`+ statusTable(key.estatus) + `</td>
-                                <td>
-                                    <a href="#">
-                                        <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
-                                            mode_edit
-                                        </span>
-                                    </a>
-                                </td>
-                            </tr>`);
+                    if (parseInt(indice_c) >= 0) {
+                        $("#table-info").append(`
+                            <tr>
+                            <td>${catEstado[indice_e].nombre}</td>
+                            <td>${catCiudad[indice_c].nombre}</td>
+                            <td>${nCon(key.cp)}</td>
+                            <td>${nCon(key.nombre)}</td>
+                            <td>`+ statusTable(key.estatus) + `</td>
+                            <td>
+                                <a href="#">
+                                    <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
+                                        mode_edit
+                                    </span>
+                                </a>
+                            </td>
+                        </tr>`);
+                    } else {
+                        //console.log(catCiudad[indice_c]);
+                    }
+                    
                 });
-                dTable("table-viajes");
+                //dTable("table-viajes");
             }).fail(function (error) {
                 dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
             });
-            filCiudad();
+            //filCiudad();
         }
     </script>
 } 
