--- a/KLS_WEB/KLS_WEB/Views/Catalogs/ShippingCompanies/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/ShippingCompanies/Index.cshtml
@@ -21,7 +21,7 @@
             </button>
         </div>
     </div>
-    <div class="p-4 shadow bg-white">
+    <div class="p-4 shadow bg-white" style="overflow-x: auto; overflow-y: hidden;">
         <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
             <thead>
                 <tr>
