--- a/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
@@ -21,8 +21,8 @@
             </button>
         </div>
     </div>
-    <div class="p-4 shadow bg-white">
-        <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
+    <div class="p-4 shadow bg-white" style="overflow-x: auto; overflow-y: hidden;">
+        <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="80%">
             <thead>
                 <tr>
                     <th>Nombre</th>
