--- a/KLS_WEB/KLS_WEB/Views/Clients/Origins/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Origins/Index.cshtml
@@ -75,7 +75,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="">Estado</label>
-                                <select class="form-control form-control-sm" name="Id_Estado" id="Id_Estado">
+                                <select class="form-control form-control-sm" name="Id_Estado" id="Id_Estado" onchange="setCiudad(this.value);">
                                     <option value="0">Selecciona</option>
                                 </select>
                             </div>
@@ -83,7 +83,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="">Ciudad</label>
-                                <select class="form-control form-control-sm" name="Id_Ciudad" id="Id_Ciudad">
+                                <select class="form-control form-control-sm" name="Id_Ciudad" id="Id_Ciudad" onchange="setColonias(this.value);">
                                     <option value="0">Selecciona</option>
                                 </select>
                             </div>
@@ -91,7 +91,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label class="">Colonia</label>
-                                <select class="form-control form-control-sm" name="Id_Colonia" id="Id_Colonia">
+                                <select class="form-control form-control-sm" name="Id_Colonia" id="Id_Colonia" onchange="setCp(this.value);">
                                     <option value="0">Selecciona</option>
                                 </select>
                             </div>
@@ -148,35 +148,50 @@
 
         function searcCP() {
             var codigoP = $("#Cp").val();
-
-            $("#Id_Estado").empty();
-            $.each(dataState, function (item, key) {
-                if (parseInt(key.estatus) == 1) {
-                    $("#Id_Estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+            $.each(dataColonies, function (item, key) {
+                if (parseInt(key.estatus) == 1 && parseInt(key.cp) == parseInt(codigoP)) {
+                    $('#Id_Estado option[value="' + key.id_estado + '"]').attr("selected", true);
+                    setCiudad(key.id_estado);
+                    $("#Id_Estado").change();
+                    $('#Id_Ciudad option[value="' + key.id_ciudad + '"]').attr("selected", true);
+                    $("#Id_Ciudad").change();
+                    setColonias(key.id_ciudad);
+                    $("#Id_Colonia").change();
                 };
             });
 
+        }
+
+        function setCp(id) {
+            let indice = dataColonies.findIndex(service => service.id == id);
+            if (parseInt(id) != 0) {
+                if (parseInt(indice) >= 0) {
+                    $("#Cp").val(dataColonies[indice].cp);
+                } else {
+                    $("#Cp").val("");
+                    dToast("info", "No se encontro ninguna colonia", "Atención");
+                }
+            }
+        }
+
+        function setColonias(id) {
+            $("#Id_Colonia").empty();
+            $("#Id_Colonia").append(`<option value="0">Selecciona una opción</option>`);
+            $.each(dataColonies, function (item, key) {
+                if (parseInt(key.estatus) == 1 && parseInt(id) == parseInt(key.id_ciudad)) {
+                    $("#Id_Colonia").append(`<option value="${key.id}">${key.nombre}</option>`);
+                };
+            });
+        }
+
+        function setCiudad(id) {
             $("#Id_Ciudad").empty();
+            $("#Id_Ciudad").append(`<option value="0">Selecciona una opción</option>`);
             $.each(dataCity, function (item, key) {
-                if (parseInt(key.estatus) == 1) {
+                if (parseInt(key.estatus) == 1 && parseInt(id) == parseInt(key.id_estado)) {
                     $("#Id_Ciudad").append(`<option value="${key.id}">${key.nombre}</option>`);
                 };
             });
-
-            $("#Id_Colonia").empty();
-            $.each(dataColonies, function (item, key) {
-                if (parseInt(key.estatus) == 1) {
-                    if (parseInt(key.cp) == parseInt(codigoP)) {
-                        console.log(key);
-                        $("#Id_Colonia").append(`<option value="${key.id}">${key.nombre}</option>`);
-                        $('#Id_Ciudad option[value="' + key.id_ciudad + '"]').attr("selected", true);
-                        $('#Id_Estado option[value="' + key.id_estado + '"]').attr("selected", true);
-                        $("#Id_Ciudad").change();
-                        $("#Id_Estado").change();
-                    }
-                };
-            });
-
         }
 
         $(window).ready(function () {
@@ -186,26 +201,31 @@
                 var jsonData = convertJson($("#frmRegister"));
                 jsonData["Id_Cliente"] = @id;
                 console.log(jsonData);
-                if (parseInt($("#idEditar").val()) != 0) {
-                    $.post("/Clients/Origins/putOrigen", jsonData, function (res) {
-                        console.log(res);
-                        loadTable();
-                        dToast("success", "Registro actualizado exitosamente.", "Actualizado");
-                        $(".guardar").attr("disabled", false);
-                    }).fail(function (error) {
-                        dToast("error", "Error al tratar de guardar el registro", "Error");
-                        $(".guardar").attr("disabled", false);
-                    });
+                if (parseInt($("#Id_Ciudad").val()) != 0 && parseInt($("#Id_Estado").val()) != 0 && parseInt($("#Id_Colonia").val()) != 0) {
+
+                    if (parseInt($("#idEditar").val()) != 0) {
+                        $.post("/Clients/Origins/putOrigen", jsonData, function (res) {
+                            console.log(res);
+                            loadTable();
+                            dToast("success", "Registro actualizado exitosamente.", "Actualizado");
+                            $(".guardar").attr("disabled", false);
+                        }).fail(function (error) {
+                            dToast("error", "Error al tratar de guardar el registro", "Error");
+                            $(".guardar").attr("disabled", false);
+                        });
+                    } else {
+                        $.post("/Clients/Origins/setOrigen", jsonData, function (res) {
+                            loadTable();
+                            dToast("success", "Registro guardado exitosamente.", "Registrado");
+                            $(".guardar").attr("disabled", false);
+                            $('#frmRegister').trigger("reset");
+                        }).fail(function (error) {
+                            dToast("error", "Error al tratar de guardar el registro", "Error");
+                            $(".guardar").attr("disabled", false);
+                        });
+                    }
                 } else {
-                    $.post("/Clients/Origins/setOrigen", jsonData, function (res) {
-                        loadTable();
-                        dToast("success", "Registro guardado exitosamente.", "Registrado");
-                        $(".guardar").attr("disabled", false);
-                        $('#frmRegister').trigger("reset");
-                    }).fail(function (error) {
-                        dToast("error", "Error al tratar de guardar el registro", "Error");
-                        $(".guardar").attr("disabled", false);
-                    });
+                    dToast("error", "Selecciona una opción", "Error");
                 }
             });
 
@@ -270,36 +290,25 @@
         function getCatalogos() {
             $.get("/Catalogs/Geography/State/getState", function (res) {
                 dataState = res;
-                //$("#Id_Estado").empty();
-                //$.each(dataState, function (item, key) {
-                //    if (parseInt(key.estatus) == 1) {
-                //        $("#Id_Estado").append(`<option value="${key.id}">${key.nombre}</option>`);
-                //    };
-                //});
+                $("#Id_Estado").empty();
+                $("#Id_Estado").append(`<option value="0">Selecciona una opción</option>`);
+                $.each(dataState, function (item, key) {
+                    if (parseInt(key.estatus) == 1) {
+                        $("#Id_Estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+                    };
+                });
             }).fail(function (error) {
                 dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
             });
 
             $.get("/Catalogs/Geography/City/getCity", function (res) {
                 dataCity = res;
-                //$("#Id_Ciudad").empty();
-                //$.each(dataCity, function (item, key) {
-                //    if (parseInt(key.estatus) == 1) {
-                //        $("#Id_Ciudad").append(`<option value="${key.id}">${key.nombre}</option>`);
-                //    };
-                //});
             }).fail(function (error) {
                 dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
             });
 
             $.get("/Catalogs/Geography/Colonies/getColonies", function (res) {
                 dataColonies = res;
-                //$("#Id_Colonia").empty();
-                //$.each(dataColonies, function (item, key) {
-                //    if (parseInt(key.estatus) == 1) {
-                //        $("#Id_Colonia").append(`<option value="${key.id}">${key.nombre}</option>`);
-                //    };
-                //});
             }).fail(function (error) {
                 dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
             });
